# HAAM_ros_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml
.docker/: Dockerfile.ROS1  docker-compose.yaml
launch/: haam_nodes.launch
logs/: zone_dist.md
logs/2000mm/analysis_results/: latex_table.txt  stopping_times.txt
logs/2000mm/stop_1743920660162299394/: stop_data.json
logs/2000mm/stop_1743920672662686347/: stop_data.json
logs/2000mm/stop_1743920689163574218/: stop_data.json
logs/2000mm/stop_1743920705763473749/: stop_data.json
logs/2000mm/stop_1743920717164371013/: stop_data.json
logs/2000mm/stop_1743920728361919403/: stop_data.json
logs/2000mm/stop_1743920740756335258/: stop_data.json
logs/2000mm/stop_1743920767862514257/: stop_data.json
logs/2000mm/stop_1743920798858003616/: stop_data.json
logs/2000mm/stop_1743922126209029674/: stop_data.json
logs/2000mm/stop_1743922134608923673/: stop_data.json
logs/2000mm/stop_1743922144102223873/: stop_data.json
logs/2000mm/stop_1743922148700408935/: stop_data.json
logs/2000mm/stop_1743922162004502058/: stop_data.json
logs/2000mm/stop_1743922169605407238/: stop_data.json
logs/2000mm/stop_1743922175306548595/: stop_data.json
logs/2000mm/stop_1743922176710395336/: stop_data.json
logs/2000mm/stop_1743922185109170675/: stop_data.json
logs/2000mm/stop_1743922191602421045/: stop_data.json
logs/2000mm/stop_1743922197807751178/: stop_data.json
logs/2000mm/stop_1743922199012029647/: stop_data.json
logs/2000mm/stop_1743922208904886245/: stop_data.json
logs/2000mm/stop_1743922221910934209/: stop_data.json
logs/low/analysis_results/: latex_table.txt  stopping_times.txt
logs/low/stop_1743923335772545576/: stop_data.json
logs/low/stop_1743923336979058504/: stop_data.json
logs/low/stop_1743923337769390583/: stop_data.json
logs/low/stop_1743923349675622940/: stop_data.json
logs/low/stop_1743923444147092819/: stop_data.json
logs/low/stop_1743923444738872051/: stop_data.json
logs/low/stop_1743923474942390441/: stop_data.json
logs/low/stop_1743923475539278030/: stop_data.json
logs/low/stop_1743923478246403932/: stop_data.json
logs/low/stop_1743923483741710424/: stop_data.json
logs/low/stop_1743923484340187788/: stop_data.json
logs/low/stop_1743923545677726745/: stop_data.json
logs/mid/analysis_results/: latex_table.txt  stopping_times.txt
logs/mid/stop_1743922905899435043/: stop_data.json
logs/mid/stop_1743922919795984268/: stop_data.json
logs/mid/stop_1743922920595979690/: stop_data.json
logs/mid/stop_1743922930603475809/: stop_data.json
logs/mid/stop_1743922931394045114/: stop_data.json
logs/mid/stop_1743922941798656702/: stop_data.json
logs/mid/stop_1743922943201770305/: stop_data.json
logs/stop_1743914380517180442/: stop_data.json
scripts/: analysis.py  haam_nodes.py  rpc_client.py  system_enums.py
(+19 files in other folders)
